Improve training and testing log

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -31,7 +31,8 @@
    },
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(device)"
    ]
   },
   {
@@ -151,11 +152,46 @@
    },
    "outputs": [],
    "source": [
-    "epoch_count = 60\n",
+    "def format_duration(seconds):\n",
+    "    # Calculate the time components\n",
+    "    components = [\n",
+    "        (\"w\", seconds // 604800),  # 1 week is 604800 seconds\n",
+    "        (\"d\", seconds // 86400 % 7),  # 1 day is 86400 seconds\n",
+    "        (\"h\", seconds // 3600 % 24),  # 1 hour is 3600 seconds\n",
+    "        (\"min\", seconds // 60 % 60),  # 1 minute is 60 seconds\n",
+    "        (\"s\", round(seconds % 60, 2)),\n",
+    "    ]\n",
+    "\n",
+    "    # Only include non-zero components\n",
+    "    components = [(label, value) for label, value in components if value > 0]\n",
+    "\n",
+    "    # Format the string\n",
+    "    return \", \".join(f\"{value}{label}\" for label, value in components)\n",
+    "\n",
+    "\n",
+    "def print_phase_info(is_training, total_loss, correct_prediction_count):\n",
+    "    dataset_length = len(\n",
+    "        training_data_loader.dataset if is_training else testing_data_loader.dataset\n",
+    "    )\n",
+    "    print(\n",
+    "        \"    {} Epoch {} done. Loss: {:.2f}, Accuracy: {:.2f}%, Phase Duration: {}, Total Duration: {}\".format(\n",
+    "            \"Training\" if is_training else \"Testing\",\n",
+    "            epoch,\n",
+    "            total_loss / dataset_length,\n",
+    "            (correct_prediction_count / dataset_length) * 100.0,\n",
+    "            format_duration(time.time() - (training_start_time if is_training else testing_start_time)),\n",
+    "            format_duration(time.time() - start_time),\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "epoch_count = 2\n",
     "start_time = time.time()\n",
     "for epoch in range(epoch_count):\n",
-    "    print(\"Epoch {} running\".format(epoch))\n",
+    "    epoch_start_time = time.time()\n",
+    "    print(\"Epoch {} running.\".format(epoch))\n",
     "    \"\"\" Training Phase \"\"\"\n",
+    "    training_start_time = time.time()\n",
     "    model.train()\n",
     "    total_loss = 0.0\n",
     "    correct_prediction_count = 0\n",
@@ -175,17 +211,10 @@
     "\n",
     "        total_loss += loss.item() * inputs.size(0)\n",
     "        correct_prediction_count += torch.sum(predictions == targets.data)\n",
-    "    epoch_loss = total_loss / len(training_data_loader.dataset)\n",
-    "    epoch_accuracy = (\n",
-    "        correct_prediction_count / len(training_data_loader.dataset)\n",
-    "    ) * 100.0\n",
-    "    print(\n",
-    "        \"[Train #{}] Loss: {:.4f} Acc: {:.4f}% Time: {:.4f}s\".format(\n",
-    "            epoch, epoch_loss, epoch_accuracy, time.time() - start_time\n",
-    "        )\n",
-    "    )\n",
+    "    print_phase_info(True, total_loss, correct_prediction_count)\n",
     "\n",
     "    \"\"\" Testing Phase \"\"\"\n",
+    "    testing_start_time = time.time()\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
     "        total_loss = 0.0\n",
@@ -200,15 +229,16 @@
     "\n",
     "            total_loss += loss.item() * inputs.size(0)\n",
     "            correct_prediction_count += torch.sum(predictions == targets.data)\n",
-    "        epoch_loss = total_loss / len(testing_data_loader.dataset)\n",
-    "        epoch_accuracy = (\n",
-    "            correct_prediction_count / len(testing_data_loader.dataset)\n",
-    "        ) * 100.0\n",
-    "        print(\n",
-    "            \"[Test #{}] Loss: {:.4f} Acc: {:.4f}% Time: {:.4f}s\".format(\n",
-    "                epoch, epoch_loss, epoch_accuracy, time.time() - start_time\n",
-    "            )\n",
-    "        )"
+    "        print_phase_info(False, total_loss, correct_prediction_count)\n",
+    "\n",
+    "    print(\n",
+    "        \"Epoch {} done. Epoch Duration: {}, Total Duration: {}\".format(\n",
+    "            epoch,\n",
+    "            format_duration(time.time() - epoch_start_time),\n",
+    "            format_duration(time.time() - start_time),\n",
+    "        )\n",
+    "    )\n",
+    "    print(\"--------------------------------------------\")"
    ]
   },
   {
