Make a bunch of improvements

--- a/train.ipynb
+++ b/train.ipynb
@@ -4,9 +4,13 @@
 			"attachments": {},
 			"cell_type": "markdown",
 			"id": "511a1806",
-			"metadata": {},
+			"metadata": {
+				"pycharm": {
+					"name": "#%% md\n"
+				}
+			},
 			"source": [
-				"## Imports"
+				"## Imports\n"
 			]
 		},
 		{
@@ -21,19 +25,25 @@
 			},
 			"outputs": [],
 			"source": [
-				"import os\n",
-				"import time\n",
 				"import torch\n",
-				"import torchvision"
+				"import torchvision\n",
+				"import matplotlib.pylab as plt\n",
+				"from datetime import datetime\n",
+				"import os\n",
+				"import time"
 			]
 		},
 		{
 			"attachments": {},
 			"cell_type": "markdown",
 			"id": "56bc6de5",
-			"metadata": {},
+			"metadata": {
+				"pycharm": {
+					"name": "#%% md\n"
+				}
+			},
 			"source": [
-				"## Device"
+				"## Device\n"
 			]
 		},
 		{
@@ -56,9 +66,13 @@
 			"attachments": {},
 			"cell_type": "markdown",
 			"id": "5a7c9595",
-			"metadata": {},
+			"metadata": {
+				"pycharm": {
+					"name": "#%% md\n"
+				}
+			},
 			"source": [
-				"## Paths"
+				"## Paths\n"
 			]
 		},
 		{
@@ -73,9 +87,9 @@
 			},
 			"outputs": [],
 			"source": [
-				"training_data_directory = \"../grouped-data/train/\"\n",
-				"testing_data_directory = \"../grouped-data/test/\"\n",
-				"model_directory = \"./models/\"\n",
+				"training_data_directory_path = \"../grouped-data/train/\"\n",
+				"testing_data_directory_path = \"../minimal-grouped-data/test/\"\n",
+				"models_directory_path = \"./models/\"\n",
 				"image_name_list_path = \"./xview2.txt\""
 			]
 		},
@@ -83,9 +97,57 @@
 			"attachments": {},
 			"cell_type": "markdown",
 			"id": "27e331e4",
-			"metadata": {},
+			"metadata": {
+				"pycharm": {
+					"name": "#%% md\n"
+				}
+			},
 			"source": [
-				"## Load Data"
+				"## Load Testing Data\n"
+			]
+		},
+		{
+			"cell_type": "code",
+			"execution_count": null,
+			"id": "8227762f",
+			"metadata": {
+				"pycharm": {
+					"name": "#%%\n"
+				}
+			},
+			"outputs": [],
+			"source": [
+				"testing_data = torchvision.datasets.ImageFolder(\n",
+				"    testing_data_directory_path,\n",
+				"    torchvision.transforms.Compose(\n",
+				"        [\n",
+				"            torchvision.transforms.Resize((224, 224)),\n",
+				"            torchvision.transforms.ToTensor(),\n",
+				"            torchvision.transforms.Normalize(\n",
+				"                [0.485, 0.456, 0.406], [0.229, 0.224, 0.225]\n",
+				"            ),\n",
+				"        ]\n",
+				"    ),\n",
+				")\n",
+				"testing_data_loader = torch.utils.data.DataLoader(\n",
+				"    testing_data,\n",
+				"    batch_size=12,\n",
+				"    shuffle=False,\n",
+				"    num_workers=8,\n",
+				")"
+			]
+		},
+		{
+			"attachments": {},
+			"cell_type": "markdown",
+			"id": "05063fba",
+			"metadata": {
+				"pycharm": {
+					"name": "#%% md\n"
+				}
+			},
+			"source": [
+				"## Load Training Data\n"
 			]
 		},
 		{
@@ -120,7 +182,7 @@
 				"\n",
 				"\n",
 				"training_data = torchvision.datasets.ImageFolder(\n",
-				"    training_data_directory,\n",
+				"    training_data_directory_path,\n",
 				"    torchvision.transforms.Compose(\n",
 				"        [\n",
 				"            torchvision.transforms.Resize((224, 224)),\n",
@@ -132,38 +194,23 @@
 				"    ),\n",
 				")\n",
 				"\n",
-				"\n",
-				"training_data_loaders = [\n",
-				"    get_first_n_lines(image_name_list_path, n) for n in [1,2]\n",
-				"]\n",
-				"\n",
-				"testing_data = torchvision.datasets.ImageFolder(\n",
-				"    testing_data_directory,\n",
-				"    torchvision.transforms.Compose(\n",
-				"        [\n",
-				"            torchvision.transforms.Resize((224, 224)),\n",
-				"            torchvision.transforms.ToTensor(),\n",
-				"            torchvision.transforms.Normalize(\n",
-				"                [0.485, 0.456, 0.406], [0.229, 0.224, 0.225]\n",
-				"            ),\n",
-				"        ]\n",
-				"    ),\n",
-				")\n",
-				"testing_data_loader = torch.utils.data.DataLoader(\n",
-				"    testing_data,\n",
-				"    batch_size=12,\n",
-				"    shuffle=False,\n",
-				"    num_workers=8,\n",
-				")"
+				"named_training_data_loaders = {\n",
+				"    data_set_name: get_first_n_lines(image_name_list_path, image_count)\n",
+				"    for (data_set_name, image_count) in [(\"baseline\", 4), (\"bryan\", 4)]\n",
+				"}"
 			]
 		},
 		{
 			"attachments": {},
 			"cell_type": "markdown",
 			"id": "a41b606d",
-			"metadata": {},
+			"metadata": {
+				"pycharm": {
+					"name": "#%% md\n"
+				}
+			},
 			"source": [
-				"## Dataset Size"
+				"## Dataset Size\n"
 			]
 		},
 		{
@@ -178,8 +225,9 @@
 			},
 			"outputs": [],
 			"source": [
-				"for training_data_loader in training_data_loaders:\n",
-				"    print(\"Training dataset size:\", len(training_data_loader.dataset))\n",
+				"for name, training_data_loader in named_training_data_loaders.items():\n",
+				"    print(f'Training dataset \"{name}\" size:', len(training_data_loader.dataset))\n",
+				"print(\"--------------\")\n",
 				"print(\"Testing dataset size:\", len(testing_data_loader.dataset))"
 			]
 		},
@@ -187,9 +235,13 @@
 			"attachments": {},
 			"cell_type": "markdown",
 			"id": "92ed61d1",
-			"metadata": {},
+			"metadata": {
+				"pycharm": {
+					"name": "#%% md\n"
+				}
+			},
 			"source": [
-				"## Train Model"
+				"## Train Model\n"
 			]
 		},
 		{
@@ -204,44 +256,49 @@
 			},
 			"outputs": [],
 			"source": [
-				"def format_duration(seconds):\n",
-				"    # Calculate the time components\n",
-				"    components = [\n",
-				"        (\"w\", seconds // 604800),  # 1 week is 604800 seconds\n",
-				"        (\"d\", seconds // 86400 % 7),  # 1 day is 86400 seconds\n",
-				"        (\"h\", seconds // 3600 % 24),  # 1 hour is 3600 seconds\n",
-				"        (\"min\", seconds // 60 % 60),  # 1 minute is 60 seconds\n",
-				"        (\"s\", round(seconds % 60, 2)),\n",
-				"    ]\n",
-				"\n",
-				"    # Only include non-zero components\n",
-				"    components = [(label, value) for label, value in components if value > 0]\n",
-				"\n",
-				"    # Format the string\n",
-				"    return \", \".join(f\"{value}{label}\" for label, value in components)\n",
+				"import model_creation\n",
+				"import logging\n",
 				"\n",
 				"\n",
-				"def print_phase_info(is_training, total_loss, correct_prediction_count):\n",
-				"    dataset_length = len(\n",
-				"        training_data_loader.dataset if is_training else testing_data_loader.dataset\n",
+				"def change_log_file_path(logger, new_path):\n",
+				"    for handler in logger.handlers[:]:  # copy the handlers list\n",
+				"        if isinstance(\n",
+				"            handler, logging.FileHandler\n",
+				"        ):  # check if handler is a FileHandler\n",
+				"            logger.removeHandler(handler)  # remove the handler from the logger\n",
+				"\n",
+				"    file_handler = logging.FileHandler(new_path)  # create a new FileHandler\n",
+				"    file_handler.setLevel(logging.INFO)  # set the log level of the handler\n",
+				"    logger.addHandler(file_handler)  # add the handler to the logger\n",
+				"\n",
+				"\n",
+				"epoch_count = 2\n",
+				"logging.basicConfig(level=logging.INFO)\n",
+				"logger = logging.getLogger()\n",
+				"\n",
+				"for i, (dataset_name, training_data_loader) in enumerate(\n",
+				"    named_training_data_loaders.items()\n",
+				"):\n",
+				"    dataset_length = len(training_data_loader.dataset)\n",
+				"    model_descriptor = (\n",
+				"        dataset_name\n",
+				"        + f\"_size{dataset_length}\"\n",
+				"        + f\"_targetEpochCount{epoch_count}\"\n",
+				"        + f\"_creationStart{datetime.utcnow().replace(microsecond=0).isoformat()}Z\"\n",
 				"    )\n",
-				"    print(\n",
-				"        \"    {} Epoch {} done. Loss: {:.2f}, Accuracy: {:.2f}%, Phase Duration: {}, Total Duration: {}\".format(\n",
-				"            \"Training\" if is_training else \"Testing\",\n",
-				"            epoch,\n",
-				"            total_loss / dataset_length,\n",
-				"            (correct_prediction_count / dataset_length) * 100.0,\n",
-				"            format_duration(\n",
-				"                time.time()\n",
-				"                - (training_start_time if is_training else testing_start_time)\n",
-				"            ),\n",
-				"            format_duration(time.time() - start_time),\n",
-				"        )\n",
+				"    model_directory_path = os.path.join(models_directory_path, model_descriptor)\n",
+				"    model_info_directory_path = os.path.join(model_directory_path, \"_info\")\n",
+				"\n",
+				"    # Create the directory if it doesn't already exist\n",
+				"    os.makedirs(model_info_directory_path, exist_ok=True)\n",
+				"    change_log_file_path(\n",
+				"        logger, os.path.join(model_info_directory_path, \"durations.log\")\n",
 				"    )\n",
+				"    logger.info(f\"Creating {model_descriptor}\")\n",
 				"\n",
-				"\n",
-				"for i, training_data_loader in enumerate(training_data_loaders):\n",
-				"    model = torchvision.models.resnet18(weights=torchvision.models.ResNet18_Weights.DEFAULT)\n",
+				"    model = torchvision.models.resnet18(\n",
+				"        weights=torchvision.models.ResNet18_Weights.DEFAULT\n",
+				"    )\n",
 				"    input_feature_count = model.fc.in_features\n",
 				"    output_feature_count = 5\n",
 				"    model.fc = torch.nn.Linear(input_feature_count, output_feature_count)\n",
@@ -249,61 +306,78 @@
 				"    criterion = torch.nn.CrossEntropyLoss()\n",
 				"    optimizer = torch.optim.SGD(model.parameters(), lr=0.001, momentum=0.9)\n",
 				"\n",
-				"    epoch_count = 1\n",
-				"    start_time = time.time()\n",
-				"    for epoch in range(epoch_count):\n",
+				"    training_losses = []\n",
+				"    training_accuracies = []\n",
+				"    testing_losses = []\n",
+				"    testing_accuracies = []\n",
+				"    model_creation_start_time = time.time()\n",
+				"    for epoch in range(1, epoch_count + 1):\n",
 				"        epoch_start_time = time.time()\n",
-				"        print(\"Epoch {} running.\".format(epoch))\n",
-				"        \"\"\" Training Phase \"\"\"\n",
+				"        logger.info(\"Epoch {} running.\".format(epoch))\n",
 				"        training_start_time = time.time()\n",
-				"        model.train()\n",
-				"        total_loss = 0.0\n",
-				"        correct_prediction_count = 0\n",
-				"        for inputs, targets in training_data_loader:\n",
-				"            inputs = inputs.to(device)\n",
-				"            targets = targets.to(device)\n",
-				"\n",
-				"            # Foward pass\n",
-				"            outputs = model(inputs)\n",
-				"            _, predictions = torch.max(outputs, 1)\n",
-				"            loss = criterion(outputs, targets)\n",
-				"\n",
-				"            # Back-propagation\n",
-				"            optimizer.zero_grad()\n",
-				"            loss.backward()\n",
-				"            optimizer.step()\n",
-				"\n",
-				"            total_loss += loss.item() * inputs.size(0)\n",
-				"            correct_prediction_count += torch.sum(predictions == targets.data)\n",
-				"        print_phase_info(True, total_loss, correct_prediction_count)\n",
-				"\n",
-				"        \"\"\" Testing Phase \"\"\"\n",
+				"        loss, accuracy = model_creation.train_model(\n",
+				"            training_data_loader, model, criterion, optimizer\n",
+				"        )\n",
+				"        model_creation.log_duration(\n",
+				"            logger, True, epoch, training_start_time, model_creation_start_time\n",
+				"        )\n",
+				"        training_losses.append(loss)\n",
+				"        training_accuracies.append(accuracy)\n",
+				"        model_name = (\n",
+				"            dataset_name\n",
+				"            + f\"_size{dataset_length}\"\n",
+				"            + f\"_epoch{epoch}Of{epoch_count}\"\n",
+				"            + f\"_{datetime.utcnow().replace(microsecond=0).isoformat()}Z\"\n",
+				"            + \".pth\"\n",
+				"        )\n",
+				"        model_creation.export_model(\n",
+				"            model,\n",
+				"            model_name,\n",
+				"            model_directory_path,\n",
+				"        )\n",
+				"        model_creation.export_loss_and_accuracy(\n",
+				"            training_losses,\n",
+				"            training_accuracies,\n",
+				"            testing_losses,\n",
+				"            testing_accuracies,\n",
+				"            model_descriptor,\n",
+				"            model_info_directory_path,\n",
+				"        )\n",
+				"        model_creation.plot_loss(\n",
+				"            training_losses, testing_losses, model_descriptor, model_info_directory_path\n",
+				"        )\n",
 				"        testing_start_time = time.time()\n",
-				"        model.eval()\n",
-				"        with torch.no_grad():\n",
-				"            total_loss = 0.0\n",
-				"            correct_prediction_count = 0\n",
-				"            for inputs, targets in testing_data_loader:\n",
-				"                inputs = inputs.to(device)\n",
-				"                targets = targets.to(device)\n",
+				"        loss, accuracy = model_creation.test_model(\n",
+				"            model, testing_data_loader, criterion\n",
+				"        )\n",
+				"        testing_losses.append(loss)\n",
+				"        testing_accuracies.append(accuracy)\n",
+				"        model_creation.export_loss_and_accuracy(\n",
+				"            training_losses,\n",
+				"            training_accuracies,\n",
+				"            testing_losses,\n",
+				"            testing_accuracies,\n",
+				"            model_descriptor,\n",
+				"            model_info_directory_path,\n",
+				"        )\n",
+				"        model_creation.log_duration(\n",
+				"            logger, False, epoch, testing_start_time, model_creation_start_time\n",
+				"        )\n",
+				"        model_creation.plot_loss(\n",
+				"            training_losses, testing_losses, model_descriptor, model_info_directory_path\n",
+				"        )\n",
 				"\n",
-				"                outputs = model(inputs)\n",
-				"                _, predictions = torch.max(outputs, 1)\n",
-				"                loss = criterion(outputs, targets)\n",
-				"\n",
-				"                total_loss += loss.item() * inputs.size(0)\n",
-				"                correct_prediction_count += torch.sum(predictions == targets.data)\n",
-				"            print_phase_info(False, total_loss, correct_prediction_count)\n",
-				"\n",
-				"        print(\n",
+				"        logger.info(\n",
 				"            \"Epoch {} done. Epoch Duration: {}, Total Duration: {}\".format(\n",
 				"                epoch,\n",
-				"                format_duration(time.time() - epoch_start_time),\n",
-				"                format_duration(time.time() - start_time),\n",
+				"                model_creation.format_duration(time.time() - epoch_start_time),\n",
+				"                model_creation.format_duration(time.time() - model_creation_start_time),\n",
 				"            )\n",
 				"        )\n",
-				"        print(\"--------------------------------------------\")\n",
-				"    torch.save(model.state_dict(), os.path.join(model_directory, str(i)))"
+				"        logger.info(\"--------------------------------------------\")\n",
+				"    logger.info(\"Done creating model\")\n",
+				"    plt.ioff()\n",
+				"    plt.show()"
 			]
 		}
 	],
